fix: highlight color on mobile

--- a/src/components/ui/Global.css
+++ b/src/components/ui/Global.css
@@ -12,7 +12,7 @@
   border-radius: 5px;
 }
 html {
-  -webkit-tap-highlighting-color: transparent;
+  -webkit-tap-highlight-color: transparent;
   scroll-behavior: smoothing;
   font-size: 62.5%;
   font-size: 1.6rem;
